<resources>
    <string name="app_name">Uranus</string>

    <string name="main_placeholder_title">Uranus</string>
    <string name="main_placeholder_subtitle">Create a playlist to begin</string>
    <string name="main_placeholder_time">0:00</string>
    <string name="main_placeholder_scrub_display">00:00</string>
    <string name="main_placeholder_scrub_seek_backwards">-%ds</string>
    <string name="main_placeholder_scrub_seek_forwards">+%ds</string>
    <string name="main_unknown_artist">Unknown Artist</string>
    <string name="main_unknown_album">Unknown Album</string>
    <string name="main_subtitle_aa_format" translatable="false">%s / %s</string>
    <string name="main_error_playlist_empty">Playlist is empty!</string>
    <string name="main_playlist_updated">Playlist updated</string>

    <string name="main_more_vol_mul">Volume Multiplier</string>
    <string name="main_more_vol_mul_desc">This value will be multiplied to Uranus\'s audio volume, independent of system-wide media volume. If unsure, keep it at 100%.</string>
    <string name="main_more_vol_mul_value">%d%%</string>
    <string name="main_more_vol_mul_value_placeholder">100%</string>
    <string name="main_more_timer">Sleep Timer</string>
    <string name="main_more_timer_desc">If set, Uranus will stop playing music when the timer reaches zero.</string>
    <string name="main_more_timer_desc_off">Sleep Timer not set</string>
    <string name="main_more_timer_desc_on_template">About %s left</string>
    <string name="main_more_timer_desc_on_m">%d min.</string>
    <string name="main_more_timer_desc_on_hm">%d hr. %d min.</string>
    <string name="main_more_timer_add_5min">+5m</string>
    <string name="main_more_timer_add_15min">+15m</string>
    <string name="main_more_timer_add_30min">+30m</string>
    <string name="main_more_timer_add_60min">+1h</string>
    <string name="main_more_timer_cancel">Cancel</string>
    <string name="main_more_timer_error_too_long">Sleep Timer cannot exceed 24 hours!</string>
    <string name="main_more_speed">Playback Speed</string>
    <string name="main_more_speed_desc">Set the playback speed. This value won\'t be remembered and will be reset if current session ends.</string>
    <string name="main_more_speed_value">Current Speed: %s</string>
    <string name="main_more_speed_increase">Faster</string>
    <string name="main_more_speed_decrease">Slower</string>
    <string name="main_more_speed_reset">Reset</string>
    <string name="main_more_speed_0p25x">0.25x</string>
    <string name="main_more_speed_0p50x">0.5x</string>
    <string name="main_more_speed_0p75x">0.75x</string>
    <string name="main_more_speed_0p90x">0.9x</string>
    <string name="main_more_speed_1x">1x</string>
    <string name="main_more_speed_1p10x">1.1x</string>
    <string name="main_more_speed_1p25x">1.25x</string>
    <string name="main_more_speed_1p50x">1.5x</string>
    <string name="main_more_speed_1p75x">1.75x</string>
    <string name="main_more_speed_2x">2x</string>

    <string name="playlist_title">Playlist</string>
    <string name="playlist_subtitle_placeholder">New Playlist, 0 songs</string>
    <plurals name="playlist_subtitle_count">
        <item quantity="one">%s, %d song</item>
        <item quantity="other">%s, %d songs</item>
    </plurals>
    <string name="playlist_warning_clear_message">Clear current playlist?</string>
    <string name="playlist_warning_cannot_save_empty_playlist">Empty playlist cannot be saved!</string>
    <string name="playlist_confirm_ok_and_start_from_title">Play from \'%s\'?</string>
    <string name="playlist_confirm_ok_and_start_from_message">The playlist screen will close, and changes on playlist will be saved.</string>
    <string name="playlist_error_playlist_inaccessible">Failed to load this playlist.</string>
    <string name="playlist_error_some_files_inaccessible">One or more files in this playlist could not be loaded.</string>

    <string name="playlist_save_title">Save Playlist As</string>
    <string name="playlist_save_message">Playlist with same name, if exists, will be overwritten.</string>
    <string name="playlist_save_saved">Playlist saved as \'%s\'.</string>
    <string name="playlist_save_hint">Playlist Name</string>
    <string name="playlist_save_error_empty_name">Name cannot be empty!</string>
    <string name="playlist_warning_discard_changes">Discard changes?</string>

    <string name="playlist_item_title_placeholder" translatable="false">Sample Song Title</string>
    <string name="playlist_item_subtitle_placeholder" translatable="false">sample_song.mp3</string>

    <string name="playlist_list_title">Load Saved Playlists</string>
    <string name="playlist_list_subtitle_placeholder">0 playlists</string>
    <plurals name="playlist_list_subtitle_count">
        <item quantity="one">%d playlist</item>
        <item quantity="other">%d playlists</item>
    </plurals>
    <string name="playlist_list_warning_replace">Current playlist will be\noverwritten!</string>
    <string name="playlist_list_warning_no_selection">Select a playlist to load!</string>
    <string name="playlist_list_warning_remove_list_message">Remove playlist \'%s\'?</string>

    <string name="playlist_list_item_title_placeholder" translatable="false">Sample Playlist</string>
    <string name="playlist_list_item_subtitle_placeholder" translatable="false">9223372036854775807 songs</string>
    <plurals name="playlist_list_item_subtitle_count">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>

    <string name="library_title">Library</string>
    <string name="library_subtitle_root">Select a folder</string>
    <string name="library_selected_placeholder">0 files selected</string>
    <plurals name="library_selected_count">
        <item quantity="one">%d file selected</item>
        <item quantity="other">%d files selected</item>
    </plurals>
    <string name="library_item_add_folder_title">Add New Folder</string>
    <string name="library_item_library_subtitle">Library</string>
    <string name="library_item_folder_subtitle">Folder</string>
    <string name="library_item_up_title">..</string>
    <string name="library_item_up_subtitle">Go Up</string>
    <string name="library_warning_remove_folder_title">Remove \'%s\'?</string>
    <string name="library_warning_remove_folder_message">Uranus will lose access to all files in this folder!\n\n(Note: files won\'t be deleted)</string>
    <string name="library_error_access_to_folder_revoked">Uranus lost access to one or more folders. The library has been updated.</string>
    <string name="library_error_folder_list_corrupted">Could not read the library data. The library has been reset.</string>

    <string name="library_item_title_placeholder" translatable="false">Music</string>
    <string name="library_item_subtitle_placeholder" translatable="false">/storage/emulated/0/Music</string>

    <string name="settings_title">Settings</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="settings_item_hide_album_art_title">Zen Mode</string>
    <string name="settings_item_hide_album_art_desc">Hide album art from the main screen.</string>
    <string name="settings_category_troubleshooting">Troubleshooting</string>
    <string name="settings_item_clear_cache_title">Clear Tag Cache</string>
    <string name="settings_item_clear_cache_desc">Try this if tag data is not displayed correctly.</string>
    <string name="settings_category_about">About</string>
    <string name="settings_item_about_title" translatable="false">Uranus %s</string>
    <string name="settings_item_about_desc" translatable="false">© 2026 sinu</string>
    <string name="settings_item_license_title">Open Source License</string>
    <string name="settings_cache_cleared">Cache cleared</string>
    <string name="settings_error_cache_clear_failed">Failed to clear cache</string>
    <string name="settings_error_no_browser">Failed to open URL, is web browser available?</string>

    <!-- do not translate -->
    <string name="settings_item_category_placeholder" translatable="false">General</string>
    <string name="settings_item_title_placeholder" translatable="false">Some Option</string>
    <string name="settings_item_subtitle_placeholder" translatable="false">If enabled, it might do something.</string>

    <string name="service_empty_notification_title">Uranus is running</string>

    <string name="acc_cover">Cover Art</string>
    <string name="acc_play">Play</string>
    <string name="acc_pause">Pause</string>
    <string name="acc_play_pause">Play/Pause</string>
    <string name="acc_prev">Previous</string>
    <string name="acc_next">Next</string>
    <string name="acc_more">More</string>
    <string name="acc_playlist">Playlist</string>
    <string name="acc_settings">Settings</string>
    <string name="acc_repeat_none">No Repeat</string>
    <string name="acc_repeat_all">Repeat All</string>
    <string name="acc_repeat_one">Repeat One</string>
    <string name="acc_repeat_shuffle">Shuffle</string>
    <string name="acc_add">Add</string>
    <string name="acc_clear">Clear</string>
    <string name="acc_load_playlist">Load Playlist</string>
    <string name="acc_save_playlist">Save Playlist</string>
    <string name="acc_select_all">Select All</string>
    <string name="acc_remove">Remove</string>
    <string name="acc_deselect_all">Deselect All</string>
    <string name="acc_move_up">Move Up</string>
    <string name="acc_move_down">Move Down</string>
    <string name="acc_vol_mul">Volume Multiplier</string>
    <string name="acc_timer">Sleep Timer</string>
    <string name="acc_speed">Playback Speed</string>

    <string name="service_name">Media Playback Service</string>
    <string name="service_desc">Used for playing media on background.</string>

    <string name="common_default_playlist_name">New Playlist</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_save">Save</string>
</resources>
