<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlaylistActivity"
    tools:ignore="NestedWeights">

    <TextView
        android:id="@+id/tv_playlist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/playlist_title"
        android:textStyle="bold" />

    <kr.pe.sinu.uranus.AlwaysFocusedTextView
        android:id="@+id/tv_playlist_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/playlist_subtitle_placeholder"
        android:textSize="12sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_playlist_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="vertical"
            tools:listitem="@layout/list_playlist_item" />

        <LinearLayout
            android:id="@+id/ll_playlist_pbr_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_playlist_add"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/acc_add"
            android:focusable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_add" />

        <ImageView
            android:id="@+id/iv_playlist_sel_remove"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/acc_remove"
            android:focusable="true"
            android:padding="12dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_remove" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_playlist_clear"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/acc_clear"
            android:focusable="true"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_delete_sweep" />

        <ImageView
            android:id="@+id/iv_playlist_sel_deselect_all"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/acc_deselect_all"
            android:focusable="true"
            android:padding="12dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_deselect" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_playlist_load"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/acc_load_playlist"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_load" />

        <ImageView
            android:id="@+id/iv_playlist_sel_move_up"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/acc_move_up"
            android:focusable="true"
            android:padding="12dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_arrow_upward" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_playlist_save"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/acc_save_playlist"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_save" />

        <ImageView
            android:id="@+id/iv_playlist_sel_move_down"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/acc_move_down"
            android:focusable="true"
            android:padding="12dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_arrow_downward" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_playlist_ok"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/common_ok"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_ok" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_playlist_cancel"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/common_cancel"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_cancel" />
    </LinearLayout>
</LinearLayout>