<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background_popup"
    android:gravity="bottom|end"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="8dp"
    android:paddingRight="20dp"
    android:paddingBottom="8dp"
    tools:ignore="NestedWeights,InefficientWeight">

    <TextView
        android:id="@+id/tv_more_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0"
        android:text="@string/main_more_vol_mul"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_more_vol_mul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="12dp"
            android:text="@string/main_more_vol_mul_desc" />

        <SeekBar
            android:id="@+id/sb_more_vol_mul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginBottom="8dp"
            android:max="100"
            android:progress="100"/>

        <TextView
            android:id="@+id/tv_more_vol_mul_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center_horizontal"
            android:text="@string/main_more_vol_mul_value_placeholder" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_more_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/main_more_timer_desc" />

        <CheckBox
            android:id="@+id/cb_more_timer_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/main_more_timer_enable" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_more_vol_mul"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/common_ok"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_graphic_eq" />

        <ImageView
            android:id="@+id/iv_more_timer"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/common_cancel"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_timer" />
    </LinearLayout>

</LinearLayout>