<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_library"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LibraryActivity"
    tools:ignore="NestedWeights">

    <TextView
        android:id="@+id/tv_library_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/library_title"
        android:textStyle="bold" />

    <kr.pe.sinu.uranus.AlwaysFocusedTextView
        android:id="@+id/tv_library_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/library_subtitle_root"
        android:textSize="12sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_library_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/list_library_item" />

        <LinearLayout
            android:id="@+id/ll_library_pbr_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_library_select_all"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/acc_select_all"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_select_all" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/tv_library_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/library_selected_placeholder" />

        <ImageView
            android:id="@+id/iv_library_ok"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/common_ok"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_ok" />

        <Space
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="0" />

        <ImageView
            android:id="@+id/iv_library_cancel"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_weight="0"
            android:background="@drawable/background_selectable"
            android:clickable="true"
            android:contentDescription="@string/common_cancel"
            android:focusable="true"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_cancel" />
    </LinearLayout>
</LinearLayout>