<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_settings_item_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:background="@color/hovered"
        android:text="@string/settings_item_category_placeholder"
        android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/ll_settings_item_item"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/background_selectable"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_settings_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_title_placeholder"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_settings_item_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_subtitle_placeholder"
                android:textSize="12sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_settings_item_check"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:background="@null"
            android:clickable="false"
            android:focusable="false" />

    </LinearLayout>

</LinearLayout>